# outin-bib

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  run_robot_tests.sh  tasks.py
.github/workflows/: ci.yaml  pylint.yaml
docs/: dod.md  end-report.md  endreport.md  retro.md  scrum.md
src/: app.py  config.py  db_helper.py  index.py  init.sql  schema.sql  util.py
src/entities/: field.py  reference.py
src/models/: field.py  reference.py
src/repositories/: reference_repository.py  todo_repository.py
src/robot/data/: crossref_child.bib  crossref_parent.bib  invalid_import.bib  valid_import.bib
src/robot/libraries/: app_library.py  browser_setup.py  clipboard_api.py  file_api.py  file_export_library.py  repository_api.py
src/robot/tests/: create.robot  edit.robot  export.robot  filter.robot  import.robot  import_export.robot  search.robot  search.robot.temp
src/robot_tests/: edit_reference.robot  filtering.robot  helpers.robot  reference_creation.robot  references_create_fail.robot  resource.robot
src/scripts/: bibtex_types.py
src/services/: bibtex_exporter.py  bibtex_import.py  bibtex_parser.py  input_validation.py  reference_service.py  reference_types.py  reference_validation.py  request_parser.py
src/static/scripts/: edit-reference.js  edit_reference.js  flash.js  impor-export.js  import-export.js  index.js  new-reference.js  new_reference.js  show-reference.js
src/static/styles/: common.css  index.css  (+6 more)
src/story_tests/: references.robot
src/templates/: edit-reference.html  edit_reference.html  import-export.html  index.html  layout.html  new-reference.html  new_reference.html  new_refrence.html  template.html
src/tests/: base.py  bibtex_types_test.py  input_validation_test.py  reference_types_test.py  validate_reference_test.py
(+39 files in other folders)
