[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "bibtex-reference-manager"
requires-python = ">=3.12,<4"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "getenv (>=0.2.0,<0.3.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "invoke (>=2.2.1,<3.0.0)",
    "bibtexparser (>=1.4.3,<2.0.0)",
]

[dependency-groups]
dev = [
    "robotframework (>=7.3.2,<8.0.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "pylint (>=4.0.3,<5.0.0)",
    "coverage (>=7.12.0,<8.0.0)",
    "robotframework-seleniumlibrary (>=6.8.0,<7.0.0)",
    "pre-commit (>=4.5.0,<5.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
]

[tool.poetry]
package-mode = false

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pylint]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
]

[tool.pylint.main]
fail-under = "9.0"

[tool.pylint.format]
max-line-length = "88"
